[package]
name = "async-http-server"
version = "0.1.0"
authors = ["Steffen Lyngbaek <steffenlyngbaek@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
http = "0.2.1"
num_cpus = "1.12.0"
serde_json = "1.0.50"
serde = { version = "1.0.105", features = ["derive"] }
url = "2.1.1"
mio = "0.7.0"

