[package]
name = "async-http-server"
version = "0.1.0"
authors = ["Steffen Lyngbaek <steffenlyngbaek@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
http = "0.2.1"
serde_json = "1.0.50"
serde = { version = "1.0.105", features = ["derive"] }
mio = { version = "0.7.0", features = ["os-poll", "tcp"] }

